fix(starktheme): text selection was invisible for alt theme (code, etc)

--- a/src/PublicApp/styles/stark/_inc.scss
+++ b/src/PublicApp/styles/stark/_inc.scss
@@ -19,6 +19,10 @@
 	background: var(--fg);
 	color: white;
 	color: var(--bg);
+	::selection{
+		background: var(--bg);
+		color: var(--fg);
+	}
 }
 
 //=====
